create router folder, create models folder/setup attendee schemea for CRUD

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/jlbouche/backendtechchallenge-ga#readme",
   "dependencies": {
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.2.4",
     "nodemon": "^2.0.15"
   }
 }
