install ejs, add create and index controller functionality, create files for views pages, update routes

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jlbouche/backendtechchallenge-ga#readme",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.4",
